Revert "Prevent code elements overflowing container like blog posts"
This reverts commit c8ec3bdf65d265baa0df5df3de992f23d2f4ae15.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -123,7 +123,7 @@ body.dark {
   }
 
   :not(pre) > code {
-    @apply px-1 font-bold break-all;
+    @apply px-1 font-bold;
   }
 
   :not(pre) > code::before,
